Revert "Upgrade para Spring Boot 3.3 / Java 21, MySQL, UUID e DTOs como record"